# reddisqueue-dataretrieval-project

./: .gitignore  README.md  docker-compose.yml  main.py  master_clientdata.db  pyproject.toml
Sample_data_generator/: README.md  generate_sample_data.py
app/: main.py
app/application/: job_manager.py  pagination.py
app/domain/: models.py  synthetic_data.py
app/infrastructure/: config.py  redis_queue.py  sqlite_db.py
app/interfaces/: api.py  schemas.py
app/observability/: logging.py  metrics.py
app/security/: rate_limit.py  validation.py
app/services/: expiry.py  worker.py
tests/: test_api_contracts.py  test_api_integration_behavior.py  test_app_routes.py  test_config_paths.py  test_main_launcher.py  test_pagination.py  test_sqlite_dimension_helpers.py
