[project]
name = "reddisqueue-datarequest-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pytest>=9.0.3",
    "redis>=6.1.0",
    "rq>=2.8.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
